optimalized fetch functions with elasticsearch and fixed layout issues

--- a/styles-TEST.css
+++ b/styles-TEST.css
@@ -1,33 +1,21 @@
-
-/* {
-  box-sizing: border-box;
-}*/
-
 body {
-  margin: 0;
-  padding: 0;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  background-color: rgb(240, 240, 240);
-}
-
-.container {
   width: 100%;
-  height: 100vh;
   align-items: center;
-  justify-content: center;
+  min-height: 100vh;
   background-color: rgb(240, 240, 240);
   display: flex;
   flex-direction: column;
   overflow: auto;
+  margin: 0;
+  padding: 0;
+
 }
 
 .navbar { 
   margin-bottom: auto;
   box-shadow: 0px 0px 5px rgba(194, 183, 183, 0.565);
   width: 100%;
-  height: 69px;
+  height: 60px;
   background-color: white;
   display: flex;
   flex-direction: row;
@@ -35,9 +23,7 @@ body {
   border-width: thin;
   border-color: rgba(0, 0, 0, 0.736);
   align-items: center;
-  
 }
-
 
 .app-title {
   font-weight: bold;
@@ -48,8 +34,7 @@ body {
 }
 
 .navbar-links {
-  position: fixed;
-  right: 0;
+  margin-left: auto;
   display: flex;
   justify-content: center;
 }
@@ -60,14 +45,18 @@ body {
   font-size: 20px;
 }
 
-
-
+.navbar-bottom {
+  background-color: #D4213D;
+  height: 40px;
+  width: 100%;
+  margin-top: auto;
+}
 
 .guess {
   display: flex;
   flex-direction: row;
   margin-bottom:20px;
-  margin-top: 80px;
+  margin-top: 60px;
   width: 750px;
   height: 45px;
   align-items: center;
@@ -103,12 +92,7 @@ body {
   border-color: rgba(0, 0, 0, 0.736);
   box-shadow: 0px 0px 10px rgba(194, 183, 183, 0.565);
 }
-.navbar-bottom {
-  background-color: #D4213D;
-  height: 40px;
-  width: 100%;
-  margin-top: auto;
-}
+
 .stats {
   width: 900px;
   padding: 0px;
@@ -124,7 +108,6 @@ body {
   margin-left: 10px;
   margin-right: 10px;
   margin-top: 5px;
-  margin-bottom: 5px;
 }
 
 #entities-pop {
